# psh

./: CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  STYLEGUIDE.md  TODO.md  rustfmt.toml
.claude/agents/: plan9-systems-engineer.md  psh-architect.md  psh-optics-theorist.md  psh-sequent-calculus.md  psh-session-type-agent.md  vdc-theory.md
.serena/: project.yml
.serena/memories/: MEMORY.md  status.md
.serena/memories/analysis/: cbpv_f_u_separation.md  classical_control_mu_binder.md  (+17 more)
docs/: agent-workflow.md  api.md  appendix-integrating-rc-and-ksh93.md  citation-workflow.md  citations.md  deliberations.md  implementation.md  ksh93-analysis.md  specification.md  syntax.md  vdc-framework.md
docs/impl/: 00-principles.md  01-sigma.md  02-val.md  03-ast.md  04-parser.md  05-checker.md  06-evaluator.md  07-environment.md  index.md
docs/spec/: 01-foundations.md  02-calculus.md  03-polarity.md  04-syntax.md  05-type-checking.md  06-types.md  07-callables.md  08-discipline.md  09-redirections.md  10-coprocesses.md  11-namespace.md  12-errors.md  13-optics.md  14-invocation.md  15-builtins.md  16-features.md  index.md  references.md
refs/ksh93/: ksh93-analysis.md  sh.1
refs/plan9/: LICENSE  rfc9p2000.txt
src/: ast.rs  env.rs  exec.rs  job.rs  lex.rs  main.rs  parse.rs  signal.rs  value.rs
tests/: basic.rs  control_flow.rs  coprocess.rs  discipline.rs  functions.rs  glob.rs  harness.rs  heredoc.rs  integration.rs  let_bindings.rs  lists.rs  nameref.rs  quoting.rs  redirection.rs  subshell.rs  typed_values.rs  variables.rs
tools/: cite-lint.sh
(+67 files in other folders)
