[package]
name = "psh"
version = "0.1.0"
edition = "2021"
description = "The pane system shell. rc heritage, ksh93 discipline functions, duploid-structured internals."

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
combine = "4"
fnmatch-regex = "0.3"
libc = "0.2"
rustix = { version = "1", features = ["pipe", "process", "stdio", "termios", "fs", "net"] }
smallvec = { version = "1", features = ["union"] }
signals_receipts = { version = "0.2", features = ["premade", "channel_notify_facility"] }

[features]
default = []
pane = ["dep:pane-proto", "dep:pane-session"]

[dependencies.pane-proto]
path = "../pane/crates/pane-proto"
optional = true

[dependencies.pane-session]
path = "../pane/crates/pane-session"
optional = true
